--- a/application/templates/the_day.html
+++ b/application/templates/the_day.html
@@ -8,19 +8,22 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-4 col-md-3">
+        <img class="img-responsive center-block" src="/static/images/inn_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-9">
         <h4>Out of Town Guest Social</h4>
-        <img alt="![Picture of Inn at the presidio]">
-
         <p>Out of town guests are invited to enjoy drinks and desserts on Friday evening at the beautiful <a
                 href="http://www.innatthepresidio.com/index.php" target="_blank">Inn at the
             Presidio</a> Formal invitation to be sent with details.</p>
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-4 col-md-3">
+        <img class="img-responsive center-block" src="/static/images/chapel_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-9">
         <h4>Ceremony</h4>
-        <img alt="![Picture of the Chapel of our Lady]">
 
         <p>The ceremony will be held at the <a href="http://www.presidio.gov/venues/Pages/Chapel-of-Our-Lady.aspx"
                                                target="_blank">Chapel of Our Lady</a> in the Presidio on Saturday
@@ -28,17 +31,21 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-4 col-md-3">
+        <img class="img-responsive center-block" src="/static/images/center_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-9">
         <h4>Cocktail Hour and Reception</h4>
-        <img alt="![Picture of the SF Film Center]">
 
         <p>Immediately following the ceremony just down the path at the SF Film Center in the Presidio.</p>
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-4 col-md-3">
+        <img class="img-responsive center-block" src="/static/images/grid_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-9">
         <h4>Send Off Picnic</h4>
-        <img alt="![ Picture of Off the Grid in the Presidio]">
 
         <p>Join us for a <a href="http://offthegridsf.com/markets/PICNIC#food" target="_blank">Picnic in the
             Presidio</a> - one of our favorite weekend activities! We will save a spot with a pop-up tent, some
