--- a/application/templates/the_stay.html
+++ b/application/templates/the_stay.html
@@ -1,32 +1,20 @@
-<div class="row">
+<div class="row" xmlns="http://www.w3.org/1999/html">
     <div class="col-xs-12">
-        <h4>Coming Soon!</h4>
-        <p>Bacon ipsum dolor sit amet turkey swine pork, short ribs pork loin beef ribs brisket tenderloin
-                tongue jerky
-                pork belly shankle spare ribs. Cow brisket andouille pork loin swine. Kevin beef
-                ribeye bresaola, short loin pastrami beef ribs turducken pancetta cow venison jerky boudin
-                t-bone rump. Tenderloin pastrami leberkas doner jerky, sirloin swine kielbasa ham shank fatback.
-                Hamburger pork belly andouille swine jowl.</p>
+        <h4>Lodging</h4>
 
-            <p>Pork andouille ham salami beef ribs shoulder ham hock swine flank jowl leberkas chuck corned
-                beef. Ground round meatloaf brisket turducken jowl boudin cow swine short ribs turkey pork loin
-                bacon. Porchetta fatback short ribs, venison capicola pancetta beef beef ribs swine shoulder
-                pastrami. Leberkas cow short ribs pig meatball swine. Kielbasa pork chop shank bacon tri-tip
-                sausage drumstick strip steak chicken brisket andouille filet mignon tail jerky turkey. Fatback
-                tongue venison beef ham pork loin meatball ground round. Turkey ground round pastrami, swine
-                strip steak tri-tip pork belly.</p>
+        <p>Please note the week of October 18th, there are a few very large events being hosted in San Francisco so
+            hotel rooms will be limited, we recommend booking well in advance.</p>
 
-            <p>Jowl short loin filet mignon porchetta pork chop turducken, ham bacon spare ribs pig shank
-                biltong venison. Ground round sirloin prosciutto, ribeye rump frankfurter hamburger. Short loin
-                meatball pork belly boudin tail pork pig andouille shankle beef ribs short ribs pastrami cow
-                salami. Andouille kielbasa bacon salami porchetta fatback tail bresaola swine meatloaf.
-                Porchetta beef ribs short ribs beef biltong.</p>
+        <h4><a href="http://www.sheratonatthewharf.com/" target="_blank">Sheraton Fisherman’s Wharf</a></h4>
 
-            <p>Strip steak landjaeger turducken doner short ribs tail. Pig bresaola sausage drumstick venison
-                ribeye short ribs meatball ham hock cow pork loin shankle ham short loin kevin. Ham sirloin ham
-                hock rump tongue prosciutto swine shoulder drumstick leberkas tail meatball ball tip venison.
-                Pastrami filet mignon flank, brisket tongue swine tail venison shank pancetta ham hock ball tip
-                tenderloin. Drumstick shankle short ribs turkey, landjaeger meatloaf chicken salami rump
-                shoulder. Bacon venison rump, sirloin sausage leberkas pastrami.</p>
+        <p>A room block is available at the Sheraton Hotel in Fisherman’s Wharf. Please book under Guzenski/Green Wedding
+            reservation by either booking online here OR calling the hotel reservations line directly at
+            (888) 627-7024.</p>
+
+        <h4><a href="https://www.airbnb.com/" target="_blank">Airbnb</a></h4>
+
+        <p>Is a trusted San Francisco community marketplace where people list their homes online for rental use.
+            This would be a great option for a group traveling together or a couple looking for a studio for the
+            weekend!</p>
     </div>
 </div>
