--- a/application/templates/the_stay.html
+++ b/application/templates/the_stay.html
@@ -1,20 +1,65 @@
-<div class="row" xmlns="http://www.w3.org/1999/html">
+<div class="row">
     <div class="col-xs-12">
-        <h4>Lodging</h4>
-
-        <p>Please note the week of October 18th, there are a few very large events being hosted in San Francisco so
+        <h2 class="text-center">Lodging</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <p class="prominent">Please note the week of October 18th, there are a few very large events being hosted in San Francisco so
             hotel rooms will be limited, we recommend booking well in advance.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Room Block</h4>
 
-        <h4><a href="http://www.sheratonatthewharf.com/" target="_blank">Sheraton Fisherman’s Wharf</a></h4>
-
-        <p>A room block is available at the Sheraton Hotel in Fisherman’s Wharf. Please book under Guzenski/Green Wedding
-            reservation by either booking online here OR calling the hotel reservations line directly at
+        <p>Sheraton Fisherman’s Wharf - please book under Guzenski/Green Wedding
+            reservation by either booking online <a
+                    href="https://www.starwoodmeeting.com/StarGroupsWeb/res?id=1403204844&key=3408C6F6" target="_blank">here</a>
+            OR calling the hotel reservations line directly at
             (888) 627-7024.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>House Rental</h4>
 
-        <h4><a href="https://www.airbnb.com/" target="_blank">Airbnb</a></h4>
-
-        <p>Is a trusted San Francisco community marketplace where people list their homes online for rental use.
+        <p><a href="https://www.airbnb.com/" target="_blank">Airbnb</a> is a trusted San Francisco community marketplace
+            where people list their homes online for rental use.
             This would be a great option for a group traveling together or a couple looking for a studio for the
             weekend!</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h2 class="text-center">Transportation</h2>
+        <h4>Flights</h4>
+
+        <p>Feel free to fly into either Oakland International Airport OR San Francisco International - they are
+            both convenient into the city! You can either take <a href="http://www.bart.gov/" target="_blank">BART</a>
+            (est. $10-12 per person), <a href="http://airportexpresssf.com/" target="_target">shuttle service</a> (est.
+            $25 pp), cab (est. $50 ride), or Uber (est. $35 ride) into the city.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Getting Around</h4>
+
+        <p>We would recommend not renting a car. Parking overnight in hotels or parking garages can get very
+            expensive not to mention hard to find! The city is full of cabs and rideshare programs which we would
+            encourage
+            you to take advantage of.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h4>Uber</h4>
+
+        <p>The most efficient way of getting around the city is by using an app called Uber. By downloading Uber to your
+            phone <a href="https://www.uber.com/invite/uberzagwedding" target="_blank">HERE</a> you will be able to
+            request a taxi, personal driver, black car, or SUV to pick you up at a specific location and drop you off
+            anywhere in the city! Best part about the process is no cash is needed, you connect your credit card to
+            your account and are automatically charged after you have completed your ride and if you use the link
+            above or promo code: <strong>uberzagwedding</strong> you get $20 off your first ride.</p>
     </div>
 </div>
