--- a/static/styles/_wedding.scss
+++ b/static/styles/_wedding.scss
@@ -4,9 +4,15 @@ body {
     height: 100%;
 }
 
+h2 {
+    font-family: 'Sue Ellen Francisco', cursive;
+    font-size: 38px;
+    text-transform: uppercase;
+}
+
 h4 {
     font-family: 'Sue Ellen Francisco', cursive;
-    font-size: 25px;
+    font-size: 28px;
 
     span {
         color: hsl(0, 0%, 50%);
@@ -25,7 +31,22 @@ p {
     @include flex-direction(column);
 }
 
-.row-spacing {
+.prominent {
+    font-weight: bold;
+
+}
+
+.row-spacing-sm {
+    & .row {
+        margin-bottom: 10px;
+
+        &:last-of-type {
+            margin-bottom: 0px;
+        }
+    }
+}
+
+.row-spacing-lg {
     & .row {
         margin-bottom: 20px;
 
