--- a/application/templates/the_city.html
+++ b/application/templates/the_city.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12">{##}
+    <div class="col-xs-12">
         <p>For those of you that might enjoy a bit of sightseeing while you are here in San Francisco please see a few
             ideas of fun things to see while you are here. Please note the week of October 18th, there are a few very
             large events being hosted in San Francisco so hotel rooms will be limited, we recommend booking well in
