safari transitionevent patch

--- a/application/templates/the_couple.html
+++ b/application/templates/the_couple.html
@@ -1,7 +1,66 @@
 <div class="row">
     <div class="col-xs-12">
         <h4>Kellen and Alison</h4>
-
-        <p>Smooth sailing from day one!</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <p>Living in brother sister dorms freshman year at Gonzaga University and having many of the same mutual
+            friends shockingly, our paths never really crossed until May of 2008! Our story really begins at 517 Mission
+            Street- Alison's college house. As Senior year was coming to an end, the number of parties and BBQ's
+            drastically increased as "real life" was creeping quickly around the corner. The ladies of 517 hosted one
+            last BBQ before graduation where we met for the first time.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12 col-md-6 col-spacing">
+        <img class="img-responsive center-block" src="/static/images/first_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-md-6">
+        <p>While neither of us were particularly interested in the other, at the time he actually started dating
+            another friend of ours for the Summer. Kellen was around the house quite a bit and we started to get to know
+            one another. As the rainiest summer in Spokane came to a close the so did his Summer fling with the other
+            housemate at 517. As most of our friends didn't stay in Spokane to start their careers, the three amigos
+            Stephanie Murphy, the two of us were excited to know that they had each other to hang out with.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <p>As our time at 517 Mission quickly came to an end, a new adventure began as Stephanie and Alison got a
+            "grown up" apartment up on the South Hill. Along with that "grown up" apartment came "grown up" furniture.
+            As we were learning to be fiscally responsible (a total joke for those of you that know both Steph and
+            Alison) the girls decided to use Craigslist to purchase a used sectional. As Kellen was the only man left in
+            Spokane the girls were able to talk him into driving a U-Haul 45 minutes outside of the city to pick up what
+            turned out to be the most disgusting pile of dog hair, feces, and dust! Kellen bit his tongue, loaded the
+            couch and began the what should have been 45 min drive back to Spokane. Not only was he covered in lord
+            knows what, but the freeway got closed while we were on our way back to town! We sat in an un-airconditioned
+            U-Haul truck for over 2 hours with only AM radio, which made Kellen late for a date with another young lady!
+            Little did he know that extended couch delivery would change his life forever, he got to know the woman he
+            would spend the rest of his life with and create a point in time that changed his future forever. After the
+            couch incident, Kellen didn't come around for a while.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12 col-sm-5 col-md-4 col-spacing">
+        <img class="img-responsive center-block" src="/static/images/early_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-sm-7 col-md-8">
+        <p>As time went on and the girls bought new furniture, Kellen started to hang around quite a bit and introduced
+            Nick Deccio (best man) to the ladies and the fabulous four was born. Whether it was nights out to Twigs and
+            Waddells, dance nights out to Crazy 8's, or Karaoke nights at The Hangar, the four of us had one hell of a
+            time together. As the two of us began to spend more time together we realized what great friends we had
+            become and that there might be something more to our friendship. We went on our first "date" to see Slumdog
+            Millionaire followed by a few Sam Adam's Winter Ale's at TGI Fridays out in the Valley. From that night
+            forward our love saga began and 6 years later we are tying the knot!</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <p>Although our journey to where we are now wasn't always smooth. All of the ups and downs have proven time and
+            time again that our friendship and love for one another is unbreakable. We have fallen madly in love with
+            one another as we have supported tough family situations, promotions and new jobs, bad days and great ones,
+            many moves, and most importantly each others hopes and dreams. Looking forward we are excited to start yet
+            another new adventure and couldn't be more excited! We are each others rock and best friend, we can't wait
+            to spend the rest of our lives together.</p>
     </div>
 </div>
