--- a/application/templates/the_day.html
+++ b/application/templates/the_day.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
+        <h4>October 18, 2014 - San Francisco, California</h4>
         <p>Since San Francisco offers such a fun array of activities and we have called this home for
             the past few years
             we are looking forward to celebrating our wedding weekend in a unique part of the city. With breathtaking
