--- a/application/templates/the_stay.html
+++ b/application/templates/the_stay.html
@@ -5,8 +5,8 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <p class="prominent">Please note the week of October 18th, there are a few very large events being hosted in San Francisco so
-            hotel rooms will be limited, we recommend booking well in advance.</p>
+        <p class="prominent">Please note the week of October 18th, there are a few very large events being hosted in San
+            Francisco so hotel rooms will be limited, we recommend booking well in advance.</p>
     </div>
 </div>
 <div class="row">
@@ -47,8 +47,7 @@
 
         <p>We would recommend not renting a car. Parking overnight in hotels or parking garages can get very
             expensive not to mention hard to find! The city is full of cabs and rideshare programs which we would
-            encourage
-            you to take advantage of.</p>
+            encourage you to take advantage of.</p>
     </div>
 </div>
 <div class="row">
