--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -10,14 +10,7 @@
     <link rel="stylesheet" href="/static/styles/bootstrap.css">
     <link rel="icon" href="/static/images/favicon152_v01.png">
     <link rel="apple-touch-icon-precomposed" href="/static/images/favicon152_v01.png">
-    <script async src="/static/scripts/wedding.js"></script>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create','UA-49606756-1', 'zagwedding.com');ga('send','pageview');
-    </script>
+    <script src="/static/scripts/wedding.js"></script>
 </head>
 <body>
 <div class="window">
