--- a/static/styles/bootstrap.css
+++ b/static/styles/bootstrap.css
@@ -51,7 +51,6 @@ p {
 
 .nav {
   width: 100%;
-  z-index: 1;
   background-color: black; }
   .nav a {
     text-decoration: none;
@@ -104,7 +103,6 @@ p {
   flex-direction: column;
   -webkit-transition: 0.75s;
   transition: 0.75s;
-  opacity: 1.0;
   padding: 10px; }
   @media (min-width: 768px) {
     .section {
@@ -134,7 +132,6 @@ p {
         -webkit-flex-basis: 10%;
         flex-basis: 10%; } }
     .active .section.selected {
-      opacity: 0.99;
       -webkit-flex-basis: 90%;
       flex-basis: 90%; }
       @media (min-width: 768px) {
@@ -147,16 +144,17 @@ p {
           flex-basis: 60%; } }
 
 .content {
-  display: none;
   overflow: auto;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.75);
   border-radius: 15px;
   padding: 15px;
   opacity: 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s; }
+  z-index: -1;
+  -webkit-transition: 0.5s;
+  transition: 0.5s; }
   .selected .content {
-    display: block; }
-  .done .content {
-    opacity: 1; }
+    -webkit-transition: opacity 0.5s 0.75s;
+    transition: opacity 0.5s 0.75s;
+    opacity: 1;
+    z-index: 0; }
