--- a/static/styles/bootstrap.css
+++ b/static/styles/bootstrap.css
@@ -154,7 +154,7 @@ p {
   -webkit-transition: opacity .5s, z-index 0s .5s;
   transition: opacity .5s, z-index 0s .5s; }
   .selected .content {
-    -webkit-transition: opacity 0.5s 0.75s;
-    transition: opacity 0.5s 0.75s;
     opacity: 1;
-    z-index: 0; }
+    z-index: 0;
+    -webkit-transition: opacity 0.5s 0.75s;
+    transition: opacity 0.5s 0.75s; }
