--- a/application/templates/the_day.html
+++ b/application/templates/the_day.html
@@ -1,6 +1,10 @@
 <div class="row">
     <div class="col-xs-12">
         <h4>October 18, 2014 - San Francisco, California</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
         <p>Since San Francisco offers such a fun array of activities and we have called this home for
             the past few years
             we are looking forward to celebrating our wedding weekend in a unique part of the city. With breathtaking
@@ -53,5 +57,20 @@
             blankets, and fold out chairs. Off the Grid picnic in the Presidio group provides an array of food trucks,
             local farmer booths, and a great bar set up for the public to enjoy on a casual Sunday afternoon. Stop by to
             enjoy the amazing views and say goodbye to the newlyweds.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12 col-sm-4 col-md-3">
+        <img class="img-responsive center-block" src="/static/images/thanks_v01.jpg">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-9">
+        <h4>Registries</h4>
+        <p>What we want most for our wedding is to have all of our friends and family in the same room, and so, more
+           than anything, we consider your presence to be our present. That said, if you would like to get us something
+           tangible we have registered at
+            <a target="_blank" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?eventType=Wedding&registryId=541297600">Bed Bath & Beyond</a>,
+            <a target="_blank" href="http://www.crateandbarrel.com/Gift-Registry/Alison-Guzenski-and-Kellen-Green/r5171552">Crate & Barrel</a>, and
+            <a target="_blank" href="http://www1.macys.com/registry/wedding/guest/?registryId=2178778">Macy's</a>.</p>
+        </p>
     </div>
 </div>
