--- a/application/templates/the_stay.html
+++ b/application/templates/the_stay.html
@@ -1,17 +1,12 @@
 <div class="row">
     <div class="col-xs-12">
-        <h2 class="text-center">Lodging</h2>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <p class="prominent">Please note the week of October 18th, there are a few very large events being hosted in San
+        <p>Please note the week of October 18th, there are a few very large events being hosted in San
             Francisco so hotel rooms will be limited, we recommend booking well in advance.</p>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h4>Room Block</h4>
+        <h4>Room Block (prices valid through 09/18)</h4>
 
         <p>Sheraton Fisherman’s Wharf - please book under Guzenski/Green Wedding
             reservation by either booking online <a
@@ -32,7 +27,6 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h2 class="text-center">Transportation</h2>
         <h4>Flights</h4>
 
         <p>Feel free to fly into either Oakland International Airport OR San Francisco International - they are
