--- a/static/styles/_wedding.scss
+++ b/static/styles/_wedding.scss
@@ -4,12 +4,6 @@ body {
     height: 100%;
 }
 
-h2 {
-    font-family: 'Sue Ellen Francisco', cursive;
-    font-size: 38px;
-    text-transform: uppercase;
-}
-
 h4 {
     font-family: 'Sue Ellen Francisco', cursive;
     font-size: 28px;
@@ -36,9 +30,9 @@ p {
 
 }
 
-.row-spacing-sm {
+.row-spacing {
     & .row {
-        margin-bottom: 10px;
+        margin-bottom: 15px;
 
         &:last-of-type {
             margin-bottom: 0px;
@@ -48,16 +42,6 @@ p {
 
 .col-spacing {
     margin-bottom: 10px;
-}
-
-.row-spacing-lg {
-    & .row {
-        margin-bottom: 20px;
-
-        &:last-of-type {
-            margin-bottom: 0px;
-        }
-    }
 }
 
 .close-btn {
@@ -76,6 +60,18 @@ p {
     width: 100%;
     background-color: hsl(0, 0%, 0%);
 
+    @include xs-and-up {
+        padding-bottom: 3px;
+    }
+
+    @include sm-and-up {
+        padding-bottom: 2px;
+    }
+
+    @include md-and-up {
+        padding-bottom: 6px;
+    }
+
     a {
         text-decoration: none;
         color: hsl(0, 0%, 100%);
@@ -92,19 +88,19 @@ p {
 
         @include xs-and-up {
             font-size: 14px;
-            line-height: 30px;
+            line-height: 25px;
             margin: 0 5px;
         }
 
         @include sm-and-up {
-            font-size: 20px;
+            font-size: 24px;
             line-height: 40px;
             margin: 0 10px;
         }
 
         @include md-and-up {
-            font-size: 28px;
-            line-height: 55px;
+            font-size: 30px;
+            line-height: 50px;
             margin: 0 15px;
         }
 
