--- a/static/styles/bootstrap.css
+++ b/static/styles/bootstrap.css
@@ -1,160 +1,1 @@
-html,
-body {
-  height: 100%; }
-
-h2 {
-  font-family: 'Sue Ellen Francisco', cursive;
-  font-size: 38px;
-  text-transform: uppercase; }
-
-h4 {
-  font-family: 'Sue Ellen Francisco', cursive;
-  font-size: 28px; }
-  h4 span {
-    color: gray; }
-
-p {
-  font-size: 16px;
-  line-height: 27px; }
-
-.window {
-  height: 100%;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column; }
-
-.prominent {
-  font-weight: bold; }
-
-.row-spacing-sm .row {
-  margin-bottom: 10px; }
-  .row-spacing-sm .row:last-of-type {
-    margin-bottom: 0px; }
-
-.col-spacing {
-  margin-bottom: 10px; }
-
-.row-spacing-lg .row {
-  margin-bottom: 20px; }
-  .row-spacing-lg .row:last-of-type {
-    margin-bottom: 0px; }
-
-.close-btn {
-  font-size: 25px;
-  cursor: pointer;
-  color: rgba(198, 36, 77, 0.6);
-  -webkit-transition: 0.25s;
-  transition: 0.25s; }
-  .close-btn:hover {
-    color: #c6244d; }
-
-.nav {
-  width: 100%;
-  background-color: black; }
-  .nav a {
-    text-decoration: none;
-    color: white;
-    margin: 0 15px;
-    white-space: nowrap;
-    cursor: pointer;
-    -webkit-transition: 0.25s;
-    transition: 0.25s;
-    font-size: 14px;
-    line-height: 30px;
-    margin: 0 5px; }
-    .nav a:hover, .nav a.selected {
-      color: #448cca;
-      text-decoration: none; }
-    @media (min-width: 768px) {
-      .nav a {
-        font-size: 20px;
-        line-height: 40px;
-        margin: 0 10px; } }
-    @media (min-width: 992px) {
-      .nav a {
-        font-size: 28px;
-        line-height: 55px;
-        margin: 0 15px; } }
-    .nav a:nth-of-type(1) {
-      font-family: 'Sail', cursive; }
-    .nav a:nth-of-type(2) {
-      font-family: 'Montez', cursive; }
-    .nav a:nth-of-type(3) {
-      font-family: 'The Girl Next Door', cursive; }
-    .nav a:nth-of-type(4) {
-      font-family: 'Nothing You Could Do', cursive; }
-    .nav a:nth-of-type(5) {
-      font-family: 'Finger Paint', cursive; }
-
-.sections {
-  height: 100%;
-  display: -webkit-flex;
-  display: flex; }
-
-.section {
-  background-position: 50% 50%;
-  background-size: cover;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-basis: 20%;
-  flex-basis: 20%;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-transition: 0.75s;
-  transition: 0.75s;
-  padding: 10px; }
-  @media (min-width: 768px) {
-    .section {
-      padding: 15px; } }
-  @media (min-width: 992px) {
-    .section {
-      padding: 25px; } }
-  .section:nth-of-type(1) {
-    background-image: url("/static/images/bg1_v01.jpg"); }
-  .section:nth-of-type(2) {
-    background-image: url("/static/images/bg2_v01.jpg"); }
-  .section:nth-of-type(3) {
-    background-image: url("/static/images/bg3_v01.jpg"); }
-  .section:nth-of-type(4) {
-    background-image: url("/static/images/bg4_v01.jpg"); }
-  .section:nth-of-type(5) {
-    background-image: url("/static/images/bg5_v01.jpg"); }
-  .active .section {
-    -webkit-flex-basis: 2.5%;
-    flex-basis: 2.5%; }
-    @media (min-width: 768px) {
-      .active .section {
-        -webkit-flex-basis: 7.5%;
-        flex-basis: 7.5%; } }
-    @media (min-width: 992px) {
-      .active .section {
-        -webkit-flex-basis: 10%;
-        flex-basis: 10%; } }
-    .active .section.selected {
-      -webkit-flex-basis: 90%;
-      flex-basis: 90%; }
-      @media (min-width: 768px) {
-        .active .section.selected {
-          -webkit-flex-basis: 70%;
-          flex-basis: 70%; } }
-      @media (min-width: 992px) {
-        .active .section.selected {
-          -webkit-flex-basis: 60%;
-          flex-basis: 60%; } }
-
-.content {
-  overflow: auto;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.75);
-  border-radius: 15px;
-  padding: 15px;
-  opacity: 0;
-  z-index: -1;
-  -webkit-transition: opacity .5s, z-index 0s .5s;
-  transition: opacity .5s, z-index 0s .5s; }
-  .selected .content {
-    opacity: 1;
-    z-index: 0;
-    -webkit-transition: opacity 0.5s 0.75s;
-    transition: opacity 0.5s 0.75s; }
+html,body{height:100%}h4{font-family:'Sue Ellen Francisco', cursive;font-size:28px}h4 span{color:gray}p{font-size:16px;line-height:27px}.window{height:100%;display:-webkit-flex;display:flex;-webkit-flex-direction:column;flex-direction:column}.prominent{font-weight:bold}.row-spacing .row{margin-bottom:15px}.row-spacing .row:last-of-type{margin-bottom:0px}.col-spacing{margin-bottom:10px}.close-btn{font-size:25px;cursor:pointer;color:rgba(198,36,77,0.6);-webkit-transition:0.25s;transition:0.25s}.close-btn:hover{color:#c6244d}.nav{width:100%;background-color:#000;padding-bottom:3px}@media (min-width: 768px){.nav{padding-bottom:2px}}@media (min-width: 992px){.nav{padding-bottom:6px}}.nav a{text-decoration:none;color:#fff;margin:0 15px;white-space:nowrap;cursor:pointer;-webkit-transition:0.25s;transition:0.25s;font-size:14px;line-height:25px;margin:0 5px}.nav a:hover,.nav a.selected{color:#448cca;text-decoration:none}@media (min-width: 768px){.nav a{font-size:24px;line-height:40px;margin:0 10px}}@media (min-width: 992px){.nav a{font-size:30px;line-height:50px;margin:0 15px}}.nav a:nth-of-type(1){font-family:'Sail', cursive}.nav a:nth-of-type(2){font-family:'Montez', cursive}.nav a:nth-of-type(3){font-family:'The Girl Next Door', cursive}.nav a:nth-of-type(4){font-family:'Nothing You Could Do', cursive}.nav a:nth-of-type(5){font-family:'Finger Paint', cursive}.sections{height:100%;display:-webkit-flex;display:flex}.section{background-position:50% 50%;background-size:cover;display:-webkit-flex;display:flex;-webkit-flex-basis:20%;flex-basis:20%;-webkit-flex-direction:column;flex-direction:column;-webkit-transition:0.75s;transition:0.75s;padding:10px}@media (min-width: 768px){.section{padding:15px}}@media (min-width: 992px){.section{padding:25px}}.section:nth-of-type(1){background-image:url("/static/images/bg1_v01.jpg")}.section:nth-of-type(2){background-image:url("/static/images/bg2_v01.jpg")}.section:nth-of-type(3){background-image:url("/static/images/bg3_v01.jpg")}.section:nth-of-type(4){background-image:url("/static/images/bg4_v01.jpg")}.section:nth-of-type(5){background-image:url("/static/images/bg5_v01.jpg")}.active .section{-webkit-flex-basis:2.5%;flex-basis:2.5%}@media (min-width: 768px){.active .section{-webkit-flex-basis:7.5%;flex-basis:7.5%}}@media (min-width: 992px){.active .section{-webkit-flex-basis:10%;flex-basis:10%}}.active .section.selected{-webkit-flex-basis:90%;flex-basis:90%}@media (min-width: 768px){.active .section.selected{-webkit-flex-basis:70%;flex-basis:70%}}@media (min-width: 992px){.active .section.selected{-webkit-flex-basis:60%;flex-basis:60%}}.content{overflow:auto;width:100%;background-color:rgba(255,255,255,0.75);border-radius:15px;padding:15px;opacity:0;z-index:-1;-webkit-transition:opacity .5s, z-index 0s .5s;transition:opacity .5s, z-index 0s .5s}.selected .content{opacity:1;z-index:0;-webkit-transition:opacity 0.5s 0.75s;transition:opacity 0.5s 0.75s}
